--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
 <body style="background-color: azure;">
     <h1>Carros mais rapidos do mundo</h1>
     <h3>O site ira te mostrar qual sao os carros mais velozes do mundo!</h3>
-    <ul>
+    <ol>
         <li>Os carros são lindos!</li>
         <li>Voce ira adquirir mais conhecimento automobilistico</li>
         <li>Os carros são lindos!</li>
-    </ul>
+    </ol>
     <table border="3px">
         <thead style="border: 3px;">
         <tr>
@@ -44,5 +44,8 @@
         </tbody>
     </table>
     <a href="index.html" style="display: inline-block; margin-top: ;">Clique aqui para voltar ao menu principal!</a>
+    <h3>Gabriel Costa Solano</h3>
+    <h3>Rm 562325</h3>
+    <h3>1TDSPV</h3>
 </body>
 </html>
